# Bian

./: .env.example  .gitignore  README.md  bian.bat  bian.ps1  findings.md  progress.md  pyproject.toml  task_plan.md
docs/: ui-reference-bcd-hybrid.html
exports/: ablation-2026-05-23.md  ablation-h209-correlation-N_eff-2026-05-25.md  ablation-h210-signal-correlation-N_eff-2026-05-25.md  ablation-h212-cross-lookback-N_eff-2026-05-25.md  ablation-h213-methodology-upgrade-2026-05-25.md  ablation-h214-temporal-stability-2026-05-25.md  ablation-h301-ewmac-fast-trend-2026-05-25.md  ablation-h302-momentum-2026-05-25.md  ablation-h303-mean-reversion-2026-05-25.md  ablation-h304-vol-regime-2026-05-25.md  ablation-h310-equal-weight-system-2026-05-25.md  ablation-h311-fdm-vol-restoration-2026-05-25.md  ablation-h312-signal-subset-optimization-2026-05-25.md  ablation-h320-walk-forward-2026-05-25.md  ablation-h341-funding-cost-estimation-2026-05-25.md  ablation-pairs-2026-05-23-rerun.md  ablation-pairs-2026-05-23-rerun2-h207-methodology.md  ablation-pairs-2026-05-23.md  ablation-trend-h300-2026-05-24.md  retrospective-pairs-trading-2026-05-23.md  summary-h301-h304-2026-05-25.md
scripts/: backfill-market-data.py  backfill_klines.py  brain-chat.ps1  connect-server-llm.ps1  daily_update.py  feishu-event-smoke.ps1  install-brain-startup-shortcut.ps1  paper_trade.py  register-brain-task.ps1  restart-brain.ps1  run_h209.py  run_h210.py  run_h212.py  run_h213.py  run_h214.py  run_h301_h304.py  run_h310.py  run_h311.py  run_h312.py  run_h320.py  run_h341.py  set-feishu-env.ps1  (+7 more)
(+215 files in other folders)
