[project]
name = "trading-learning"
version = "0.1.0"
description = "Local low-frequency crypto trading learning system"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
trading-learning = "trading_learning.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
