[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-learning"
version = "0.1.0"
description = "Local low-frequency crypto trading learning system"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "numpy>=2",
    "pandas>=2",
    "requests>=2",
]

[project.scripts]
trading-learning = "trading_learning.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-data]
"trading_learning.storage" = ["schema.sql"]
"trading_learning.dashboard" = ["static/*.html", "static/*.css", "static/*.js", "static/vendor/*.js", "static/vendor/*LICENSE"]
